# starwarden

./: .env.example  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  pytest.ini  renovate.json  requirements.txt  starwarden.py
.github/: dependabot.yml
.github/workflows/: docker.yml  lint.yml  publish.yml  pytest.yml  scorecard.yml  test.yml
docker/: cron_job.sh  entrypoint.sh
src/: starwarden.py
starwarden/: config.py  github_api.py  linkwarden_api.py  main.py  tui.py
starwarden/utils/: logger.py  notify.py
tests/: test_github_api.py  test_linkwarden_api.py  test_linkwarden_manager.py  test_main.py  test_smoke.py  test_starwarden_app.py
