[project]
name = "starwarden"
version = "2.0.0"
description = "Sync GitHub Stars to Linkwarden"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "apprise==1.9.6",
  "pygithub==2.8.1",
  "python-dotenv==1.2.1",
  "requests==2.32.4",
  "rich==14.2.0",
  "tqdm==4.67.3",
]

[project.scripts]
starwarden = "starwarden.main:main"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.12.12",
  "ty>=0.0.1a20",
  "vulture>=2.14"
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "starwarden"
module-root = ""

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
ignore = [
  "ANN",  # flake8-annotations
  "COM",  # flake8-commas
  "DJ",  # django
  "EXE",  # flake8-executable
  "BLE",  # blind except
  "PTH",  # flake8-pathlib
  "T10",  # debugger
  "TID",  # flake8-tidy-imports
  "D",
  "G004",
  "PLR2004",
  "E501",  # line too long
  "TRY",
  "SIM105",  # faster without contextlib
]
extend-select = ["B", "S", "SIM", "T20", "C90", "RUF"]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.vulture]
min_confidence = 100
exclude = [".venv", "tests"]
